# hippocraticum-ai-consultation-sdk

./: .gitignore  README.md  a.py  hippocraticum_ai_consultation_sdk_link  pyproject.toml
hippocraticum-ai-consultation-sdk/: __init__.py  client.py  client_public.py  client_public_async.py  errors.py  tools.py
hippocraticum-ai-consultation-sdk/api/crud/: delete_consultation_sessions_id_delete.py  get_all_consultations_sessions_get.py  get_consultation_sessions_id_get.py  (+2 more)
hippocraticum-ai-consultation-sdk/models/: __init__.py  body_post_processing_sessions_id_post_process_post.py  consultation_state.py  consultation_type.py  created_at.py  event.py  events.py  google_language_code.py  icd10_candidate.py  id.py  medical_report_entity.py  medical_response_body.py  medical_response_body_value_type_0.py  medical_response_format.py  pathto_pdf.py  process_part.py  pydantic_consultation_delete_response.py  pydantic_consultation_initialize_request.py  pydantic_consultation_initialize_response.py  pydantic_consultation_public.py  pydantic_consultation_public_context_type_0.py  pydantic_consultation_realtime_features.py  pydantic_get_consultation_diarisation_response.py  pydantic_get_consultation_diarisation_response_diarisation_item.py  pydantic_get_consultation_icd_10_response.py  pydantic_get_consultation_medical_report_response.py  pydantic_get_consultation_questions_response.py  pydantic_get_consultation_transcript_response.py  pydantic_get_operation_response.py  pydantic_post_process_response.py  pydantic_stop_consultation_response.py  update_at.py
(+15 files in other folders)
